sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:8: error: value or is not a member of Boolean
  while (ecart > 1 or  aBouger == true){
                   ^